--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "prisma": "^3.8.1",
     "validator": "^13.7.0"
