--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "start:dev": "dotenv -e .env -- nodemon src/index.js"
+    "start:dev": "dotenv -e .env -- nodemon src/index.js",
+    "crear_migracion": "prisma migrate dev --preview-feature",
+    "correr_migraciones": "prisma migrate deploy --preview-feature",
+    "reset_db": "prisma migrate reset --preview-feature --skip-seed"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,7 @@
   "homepage": "https://github.com/Eliseonop/Backend#readme",
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "aws-sdk": "^2.1069.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "express": "^4.17.2",
